--- a/src/app/asignaturas/asignaturas.component.html
+++ b/src/app/asignaturas/asignaturas.component.html
@@ -1,1 +1,7 @@
-<p>asignaturas works!</p>
+<h3 class="mt-3">{{title}}</h3>
+<ul class="list-group">
+    <hr>
+    <li class="list-group-item list-group-item-warning" *ngFor="let asignaturas of asignaturas">
+        <p class="text-primary">{{asignaturas.siglas}} | {{asignaturas.nombreAsignatura}} | <span class="text-success">{{asignaturas.profesor}}</span></p>
+    </li>
+</ul>
