--- a/src/app/preguntas/preguntas.component.html
+++ b/src/app/preguntas/preguntas.component.html
@@ -1,4 +1,4 @@
-<h3>{{title}}</h3>
+<h3 class="mt-3">{{title}}</h3>
 <ul class="list-group">
     <hr>
     <li class="list-group-item list-group-item-warning" *ngFor="let preguntas of preguntas">
