--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <body>
   <div>
     <div class="col-12 d-grid justify-content-center">
-      <h1>{{title}}</h1>
-      <h4 class="text-center">{{autor}}</h4>
+      <app-cabecera></app-cabecera>
     </div>
     <div class="col-12 d-flex pt-5">
       <div class="col-6 text-center border border-primary"><app-asignaturas></app-asignaturas></div>
